frontend changes, generate email confirmation tokens

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,3 @@
-<p>Home page of Open Item Sets</p>
+<p>
+  Open Item Sets is a collaberative project where players can gather and share their item sets.
+</p>
