--- a/app/views/item_sets/show.html.erb
+++ b/app/views/item_sets/show.html.erb
@@ -2,6 +2,7 @@
 <div ng-controller="itemSetViewController" class="row">
   <div class="col-lg-10">
     <p>Last updated <%= time_ago_in_words(@item_set.updated_at) %> ago.</p>
+    <p>Last updated <%= time_ago_in_words(@item_set.updated_at) %> ago.</p>
 
     <%= @item_set.description %>
 
