--- a/app/views/item_sets/show.html.erb
+++ b/app/views/item_sets/show.html.erb
@@ -23,7 +23,7 @@
       <%= link_to(raw("<span class='glyphicon glyphicon-remove'></span> ") +
                   "Unsubscribe", subscription_path(@subscription), :method => :delete, :class => 'btn btn-primary' ) %>
     <% end %>
-    <a class="btn btn-default" href="#">
+    <a class="btn btn-default" href="/install">
       <span class="glyphicon glyphicon-book"></span> How to Use
     </a>
 
