--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,7 +66,7 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.username %><b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">Preferences</a></li>
+                  <li><a href="/users/preferences">Preferences</a></li>
                   <li>
                     <%= link_to("Sign out", session_path(1), :method => :delete) %>
                   </li>
