--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,19 @@
+<div class="jumbotron">
+  <h1>Open Item Sets</h1>
+
+  <p>
+  Open Item Sets is a collaberative project where players can gather, share, use, and comment
+  on item sets. It's 100% free to use, and the project is also 100% open source.
+  </p>
+
 <p>
-  Open Item Sets is a collaberative project where players can gather and share their item sets.
+  <strong>If you are new to Open Item Sets</strong>, 
+  check out our <%= link_to("Getting Started", "/install") %> guide.
+You may also be interested at 
+<%= link_to("browsing", item_sets_path) %> item sets created by other people, or
+<%= link_to("create your own", new_item_set_path) %> item set.
 </p>
+</div>
+
+
+
