--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,9 @@
 <div class="jumbotron">
-  <h1>Open Item Sets</h1>
+  <h1>Welcome to Open Item Sets</h1>
 
   <p>
-  Open Item Sets is a collaberative project where players can gather, share, use, and comment
-  on item sets. It's 100% free to use, and the project is also 100% open source.
+  Open Item Sets is a platform where League of Legends players can gather, share, use, and comment
+  on item sets. It is <strong>free</strong> to use, and the project is also <strong>open source</strong>.
   </p>
 
 <p>
@@ -12,6 +12,10 @@
 You may also be interested at 
 <%= link_to("browsing", item_sets_path) %> item sets created by other people, or
 <%= link_to("create your own", new_item_set_path) %> item set.
+</p>
+
+<p>
+If you already have an account, click <%= link_to("here", new_session_path) %> to log in
 </p>
 </div>
 
