more frontend changes

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,18 +6,20 @@
   on item sets. It is <strong>free</strong> to use, and the project is also <strong>open source</strong>.
   </p>
 
-<p>
-  <strong>If you are new to Open Item Sets</strong>, 
-  check out our <%= link_to("Getting Started", "/install") %> guide.
-You may also be interested at 
-<%= link_to("browsing", item_sets_path) %> item sets created by other people, or
-<%= link_to("create your own", new_item_set_path) %> item set.
-</p>
+  <p>
+  With Open Item Sets, you will be able to subscribe to item sets created by other players, as well
+  as creating your own item sets that suits your playstyle. Item Sets will be automatically updated to your
+  own computer and you will be able to use them ingame
+  as they update. Best of all, you will never have to re-create item sets when logging on to a 
+  different computer ever again.
+  </p>
+
+  <p>
+  <%= link_to("Getting Started", "/install", :class => "btn btn-primary btn-lg") %>
+  </p>
+</div>
 
 <p>
 If you already have an account, click <%= link_to("here", new_session_path) %> to log in
 </p>
-</div>
-
-
 
