--- a/app/views/user_mailer/confirm_email.text.erb
+++ b/app/views/user_mailer/confirm_email.text.erb
@@ -1,8 +1,11 @@
 Dear <%= @user.username %>
 
-In order for us to confirm that this is indeed your Email addres, you must
-click the link below to confirm your email account.
+In order for us to confirm that this is indeed your Email addres, please click the link below to
+confirm your email account. If the link does not work, please copy and paste the link to the address
+bar on the browser.
 
 <%= @url %>
 
 Thank you and have a great day!
+
+Open Item Sets Project
