about us page, update comment spec

--- a/app/views/home/about_us.html.erb
+++ b/app/views/home/about_us.html.erb
@@ -1,3 +1,5 @@
 <h1>Open Item Sets Project</h1>
 
-<p>To contact us, please use the forum.</p>
+<p>Open Item Sets is created by <%= link_to("ichiro101", "https://github.com/ichiro101") %></p>
+
+<p>To contact us, you can email: support at openitemsets dot com</p>
