--- a/app/views/item_sets/show.html.erb
+++ b/app/views/item_sets/show.html.erb
@@ -1,7 +1,8 @@
 
 <div ng-controller="itemSetViewController" class="row">
   <div class="col-lg-10">
-    <p>Last updated <%= time_ago_in_words(@item_set.updated_at) %> ago.</p>
+    <p>Last updated <%= time_ago_in_words(@item_set.updated_at) %> ago. There are currently
+    <%= pluralize(@item_set.subscriptions.count, "subscribers") %></p>
     <p>Created at <%= time_ago_in_words(@item_set.created_at) %> ago by 
     <%= mini_gravatar_for(@item_set.user) %>
     <%= link_to(@item_set.user.display_name, profile_user_path(@item_set.user)) %>.</p>
@@ -35,7 +36,35 @@
 
     <hr />
 
+    <!-- COMMENT AREA -->
     <h3>Comments</h3>
+    <% @item_set_comments.each do |comment| %>
+      <% next if !comment.persisted? %>
+      <div class="well">
+        <p>By 
+        <%= mini_gravatar_for(comment.user) %>
+        <%= link_to(comment.user.display_name, profile_user_path(comment.user)) %>
+
+        
+        <% if comment.user.id == current_user.id %>
+          (<%= link_to("Delete", item_set_item_set_comment_path(@item_set, comment), :method => :delete) %>)
+        <% end %>
+        </p>
+        <p>
+          <%= comment.comment %>
+        </p>
+      </div>
+    <% end %>
+
+    <% if @item_set.item_set_comments.count == 0 %>
+      <p>There are currently no comments on this item set.</p>
+    <% end %>
+
+    <%= bootstrap_form_for([@item_set, @item_set_comment], :method => :post) do |f| %>
+      <%= f.text_area :comment, :label => "Comment on this Item Set" %>
+      <%= f.submit "Post Comment" %>
+    <% end %>
+    <!-- END OF COMMENT AREA -->
   </div><!-- col -->
 
 
