delete item sets, comments

--- a/app/views/item_sets/show.html.erb
+++ b/app/views/item_sets/show.html.erb
@@ -74,6 +74,7 @@
       <ul class="nav nav-pills nav-stacked">
         <li><%= link_to("Edit Item Set", edit_children_item_set_path(@item_set)) %></li>
         <li><%= link_to("Edit Metadata", edit_item_set_path(@item_set)) %></li>
+        <li><%= link_to("Delete this Item Set", delete_item_set_path(@item_set)) %></li>
       </ul>
     </div><!-- col -->
   <% end %>
