add important note

--- a/app/views/home/install.html.erb
+++ b/app/views/home/install.html.erb
@@ -10,6 +10,11 @@ Steps to get started using Open Item Sets:
 </ol>
 </p>
 
+<p><strong>Important Note</strong>
+Item sets created by Open Item Sets will not show up on the Item Sets tab in the profile window. It is stored seperately and will show
+up ingame, so don't worry if it doesn't show up.
+</p>
+
 <h3>Download the Desktop Client</h3>
 <p>The current version of the desktop client is <strong><%= @version %></strong>. </p>
 
