minor wording change

--- a/app/views/home/install.html.erb
+++ b/app/views/home/install.html.erb
@@ -12,7 +12,7 @@ Steps to get started using Open Item Sets:
 
 <p><strong>Important Note</strong>
 Item sets created by Open Item Sets will not show up on the Item Sets tab in the profile window. It is stored seperately and will show
-up ingame, so don't worry if it doesn't show up.
+up ingame, so don't worry if it doesn't show up in the game lobby client.
 </p>
 
 <h3>Download the Desktop Client</h3>
