--- a/app/views/home/install.html.erb
+++ b/app/views/home/install.html.erb
@@ -1,21 +1,43 @@
 <h1>Getting Started</h1>
 
+<p>Scroll down below for the Desktop Client download.</p>
+
+<h4>Register an Account</h4>
+<p>Before you get started with Open Item Sets, it is recommended that you register an account. Once
+you have an account, you can create your own item sets, or subscribe to item sets created by other
+players.</p>
+
+<h4>Download the Desktop Client</h4>
 <p>
-Steps to get started using Open Item Sets:
-<ol>
-  <li>Register an account!</li>
-  <li>Build your own item sets, or browse around and subscribe to ones you like.</li>
-  <li>Download our Open Item Sets desktop application (see below) to sync your online item sets to the
-  League of Legends client.</li>
-</ol>
+Once you have created an account, you will need to download the Desktop Client. Our Desktop Client
+will ensure that the item sets on your computer will stay in sync with the item sets you subscribe
+to or created. Once you installed the desktop client, the desktop client will prompt for your League
+of Legends installation folders and username. Your username is the name that is displayed on the
+top right corner of the site if you are viewing this site from a PC. 
 </p>
 
-<p><strong>Important Note</strong>
-Item sets created by Open Item Sets will not show up on the Item Sets tab in the profile window. It is stored seperately and will show
-up ingame, so don't worry if it doesn't show up in the game lobby client.
+<h4>Creating Your First Item Set</h4>
+<p>
+To create an item set, click on "Browse Item Sets" on the top of the page, and then click on
+"Create Item Set". You will be prompted for the title, champion and position. Once that's done
+you can start editing your own item set via our drag and drop interface.
 </p>
 
-<h3>Download the Desktop Client</h3>
+<h4>Subscribing to Other Player's Item Sets</h4>
+<p>
+While browsing item sets created by other people, you may wish to subscribe to their item sets. Simply
+click the "Subscribe" button on the bottom of the item set details.
+</p>
+
+
+<h3>Important Note</h3>
+<p>
+Item sets created by Open Item Sets will not show up on the Item Sets tab in the profile window. It
+is stored seperately and will show up ingame, so don't worry if it doesn't show up in the game lobby
+client.
+</p>
+
+<h1>Download the Desktop Client</h1>
 <p>The current version of the desktop client is <strong><%= @version %></strong>. </p>
 
 <p><%= link_to("Download", 
