add images to the guide, repositioning page elements

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,15 +3,15 @@
 
   <p>
   Open Item Sets is a platform where League of Legends players can gather, share, use, and comment
-  on item sets. It is <strong>free</strong> to use, and the project is also <strong>open source</strong>.
+  on item sets. It is <strong>free</strong> to use, and the project is also <strong>open
+  source</strong>.
   </p>
 
   <p>
   With Open Item Sets, you will be able to subscribe to item sets created by other players, as well
-  as creating your own item sets that suits your playstyle. Item Sets will be automatically updated to your
-  own computer and you will be able to use them ingame
-  as they update. Best of all, you will never have to re-create item sets when logging on to a 
-  different computer ever again.
+  as creating your own item sets that suits your playstyle. Item Sets will be automatically updated
+  to your own computer and you will be able to use them ingame as they update. Best of all, you will
+  never have to re-create item sets when logging on to a different computer ever again.
   </p>
 
   <p>
