desktop client updated to 0.0.2

--- a/app/views/home/install.html.erb
+++ b/app/views/home/install.html.erb
@@ -5,6 +5,8 @@
                "http://static.openitemsets.com/downloads/openitemsets-" + @version +"-windows-installer.exe", 
                :class => "btn btn-primary", :type => "button") %> </p>
 
+<h3>Update Log</h3>
+<p><em>0.0.2</em> Fixed an issue with directory not adding properly.</p>
 
 <h1>Getting Started</h1>
 
