linking to Q & A forum

--- a/app/views/home/install.html.erb
+++ b/app/views/home/install.html.erb
@@ -61,6 +61,10 @@ is stored seperately and will show up ingame, so don't worry if it doesn't show 
 client.
 </p>
 
+<h3>Need Help?</h3>
+<p>If you run into any problems, please do not hesitate to ask us a question on our 
+<%= link_to("Questions & Answers forum", "http://support.openitemsets.com") %>.</p>
+
 <h3>Desktop Client</h3>
 
 <p><%= link_to("Download the Desktop Client", 
