--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -74,6 +74,7 @@
             <% if signed_in? %>
               <li><%= link_to("View My Item Sets", profile_user_path(current_user)) %></li>
             <% end %>
+            <li><%= link_to("Ask a Question", "http://support.openitemsets.com/") %></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <% if signed_in? %>
