update desktop client to 0.0.2b

--- a/app/views/home/install.html.erb
+++ b/app/views/home/install.html.erb
@@ -6,6 +6,7 @@
                :class => "btn btn-primary", :type => "button") %> </p>
 
 <h3>Update Log</h3>
+<p><em>0.0.2b</em> Added Compatibility with Windows XP.</p>
 <p><em>0.0.2</em> Fixed an issue with directory not adding properly.</p>
 
 <h1>Getting Started</h1>
