--- a/app/views/item_sets/show.html.erb
+++ b/app/views/item_sets/show.html.erb
@@ -46,7 +46,7 @@
         <%= link_to(comment.user.display_name, profile_user_path(comment.user)) %>
 
         
-        <% if comment.user.id == current_user.id %>
+        <% if signed_in? && comment.user.id == current_user.id %>
           (<%= link_to("Delete", item_set_item_set_comment_path(@item_set, comment), :method => :delete) %>)
         <% end %>
         </p>
