--- a/app/views/item_sets/_item_set_view.html.erb
+++ b/app/views/item_sets/_item_set_view.html.erb
@@ -2,7 +2,7 @@
   <div class="item-set-block-view well">
     <h4><%= item_block['type'] %></h4>
     <% item_block['items'].each do |item_object| %>
-      <div data-toggle="tooltip" data-placement="auto" title="<%= item_description(item_object['id']) %>" class="item" >
+      <div data-toggle="tooltip" data-placement="auto" title="<strong><%= item_name(item_object['id']) %></strong><br><br><%= item_description(item_object['id']) %>" class="item" >
         <%= item_img_for(item_object['id']) %>
         <span><%= item_gold(item_object['id']) %></span>
       </div><!-- item -->
