reword the error message

--- a/app/views/home/500.html.erb
+++ b/app/views/home/500.html.erb
@@ -1,3 +1,4 @@
 <p>
-A report of this error has been sent to the developers of this application. 
+A report of this error has been sent to the developers of this application. Rest assured this issue
+will be taken care of. Thank you for your patience.
 </p>
