--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -40,9 +40,6 @@
     <%= include_gon %>
 
     <div id="page-content" class="fluid-container">
-      <% if !@page_title.blank? %>
-        <h1><%= @page_title %></h1>
-      <% end %>
       <% flash.each do |key, value| %>
         <div class="alert alert-<%= key %> alert-dissmissable">
           <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
@@ -50,7 +47,19 @@
         </div>
       <% end %>
 
-      <%= yield %>
+      <div class="col-sm-2">
+        <h3>Admin Menu</h3>
+        <div class="list-group">
+          <%= link_to "Errors", admin_exception_records_path, :class => "list-group-item" %>
+          <%= link_to "Back to Main Site", root_url, :class => "list-group-item" %>
+        </div>
+      </div>
+      <div class="col-lg-10">
+        <% if !@page_title.blank? %>
+          <h1><%= @page_title %></h1>
+        <% end %>
+        <%= yield %>
+      </div>
     </div>
 
   </body>
