remove context menu functionality

--- a/app/views/item_sets/edit_children.html.erb
+++ b/app/views/item_sets/edit_children.html.erb
@@ -218,5 +218,13 @@
       </li>
     </div>
   </div>
+
+  <div id="set-context-menu">
+    <ul class="dropdown-menu" role="menu">
+      <li>
+        <a href="#" data-menu-action="Remove">Remove</a>
+      </li>
+    </div>
+  </div>
   <!-- END OF CONTEXT MENU -->
 </div><!-- row -->
